fix: dropdown styles (spacing mostly, dropdown left)

--- a/frontend/src/components/pages/components/version-dropdown/styles.module.scss
+++ b/frontend/src/components/pages/components/version-dropdown/styles.module.scss
@@ -1,6 +1,6 @@
 .authorFullName {
   font-size: 1.32rem;
-  width: 160px;
+  width: max-content;
   padding-left: 5px;
   padding-right: 15px;
   overflow: hidden;
@@ -8,12 +8,8 @@
   text-overflow: ellipsis;
 }
 
-.avatarContainer:hover {
-  background: linear-gradient(90deg, #eff2f561 0%, #8789922b);
-}
-
-.nav-link {
-  color: #6c757d !important;
+.avatarContainer:hover p {
+  color: black !important;
 }
 
 .dropDownMenu {
